# little-lookup

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile-glibc  Dockerfile-musl  Jenkinsfile  LICENSE  README.md  build.sh  docker-compose.yaml  docker-entrypoint.sh  populate_db.sh  start_pg.sh
.github/workflows/: docker-push.yml  rust.yml
docs/: API.md
migrations/2019-09-08-220454_create_items/: up.sql
migrations/2021-02-13-190144_add_namespaces/: down.sql  up.sql
migrations/sqlite/2019-09-08-191110_create_items/: up.sql
scripts/: list_spam.sh  populate_db_1.sh  populate_db_2.sh  populate_db_3.sh  populate_db_4.sh  populate_db_5.sh  spam_list.sh  spam_update.sh
src/: db_connection.rs  main.rs  models.rs  schema.rs  util.rs
src/handlers/: items.rs
src/models/: item.rs
