[package]
name = "little-lookup"
version = "2.5.4"
authors = ["jscheel42 <jscheel42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*" # dep in actix-web, added here so we can reference the crate in main.rs
actix-web = "4.6.0"
chrono = "0.4.38" # { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel = { version = "2.1.6", features = [ "r2d2", "postgres", "chrono" ] }
diesel_migrations = "2.1.0"
dotenv = "0.15"
env_logger = "0.11.3"
log = "0.4.21"
mio = "~0.8.11" # force 0.8.11 or higher for https://rustsec.org/advisories/RUSTSEC-2024-0019.html, remove requirement once upstream deps bump mio
openssl = "0.10.64" # Needed for postgres
openssl-probe = "0.1.5"
