[package]
name = "little-lookup"
version = "2.6.2"
authors = ["jscheel42 <jscheel42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*" # dep in actix-web, added here so we can reference the crate in main.rs
actix-web = "4.9.0"
chrono = "0.4.39" # { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel = { version = "2.2.7", features = [ "r2d2", "postgres", "chrono" ] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
env_logger = "0.11.6"
log = "0.4.25"
h2 = "~0.4.7" # force 0.3.26 or higher for https://seanmonstar.com/blog/hyper-http2-continuation-flood/, remove requirement once upstream deps bump mio
mio = "~1.0.3" # force 0.8.11 or higher for https://rustsec.org/advisories/RUSTSEC-2024-0019.html, remove requirement once upstream deps bump mio
openssl = "0.10.70" # Needed for postgres
openssl-probe = "0.1.6"
url = "2.5.0" # Force newer version with fixed idna dependency

[dependencies.ahash]
version = "0.8.11"

[dependencies.futures-util]
version = "0.3.31"
